--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 HELP.md
-.gradle
 build/
-!**/src/main/**
-!**/src/test/**
 
 ### STS ###
 .apt_generated
@@ -12,6 +9,9 @@ build/
 .settings
 .springBeans
 .sts4-cache
+bin/
+!**/src/main/**/bin/
+!**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
 .idea
@@ -19,6 +19,8 @@ build/
 *.iml
 *.ipr
 out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
