--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,18 @@
 plugins {
-  id 'org.springframework.boot' version '2.2.5.RELEASE'
+  id 'org.springframework.boot' version '2.6.13'
   id 'io.spring.dependency-management' version '1.0.9.RELEASE'
   id 'java'
 }
 
 group = 'com.kodilla'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+sourceCompatibility = '17'
+
+configurations {
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
+}
 
 repositories {
   mavenCentral()
@@ -14,13 +20,12 @@ repositories {
 
 dependencies {
   implementation('org.springframework.boot:spring-boot-starter-web')
-  implementation('org.projectlombok:lombok')
-  annotationProcessor('org.projectlombok:lombok')
+  implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+  compileOnly('org.projectlombok:lombok:1.18.24')
+  annotationProcessor('org.projectlombok:lombok:1.18.24')
 
-  compile('org.springframework.boot:spring-boot-starter-data-jpa')
-  compile('mysql:mysql-connector-java')
+  runtimeOnly('mysql:mysql-connector-java')
 //  compile('org.postgresql:postgresql')
-
   testImplementation('org.springframework.boot:spring-boot-starter-test') {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
