--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Heroku
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
 spring.jpa.database=mysql
 
 # Local run
